# bot-api

./: .env.example  .gitignore  LICENSE  Makefile  alembic.ini  pyproject.toml
docker/: .dockerignore  Dockerfile  docker-compose.yaml
migrations/: env.py
migrations/versions/: 2025-11-30_22df878f6af1.py
src/: main.py
src/core/database/: __init__.py  base.py  postgres.py
src/core/logging/: logging.py
src/core/middlewares/: http.py  profile.py
src/core/security/: permissions.py  security.py  session.py
src/core/settings/: settings.py
src/di/: dependency_injection.py  unit_of_work.py
src/entities/: __init__.py  enums.py  event.py  event_participant.py  kv_store.py  note.py  reminder.py  space.py  space_member.py  telegram_chat.py  user.py
src/models/: auth.py
src/repositories/abstraction/: auth.py
src/routers/http/v1/: api.py
src/routers/http/v1/auth/: router.py
src/usecases/: base_use_case.py
src/usecases/auth/: auth.py
src/utils/: authenticate.py  normalize_phone.py
